--- a/index.html
+++ b/index.html
@@ -32,5 +32,7 @@
             r.parentNode.insertBefore(e,r)}(window,document,'script','ga'));
             ga('create','UA-XXXXX-X');ga('send','pageview');
         </script>
+        <a href="http://AreYouCereal.github.io/gitGUI" title="Link to my first gh-pages">My MakerSquare JS Exercises<a>
+
     </body>
 </html>
